--- a/app/package.json
+++ b/app/package.json
@@ -3,17 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon -L ./bin/www"
+    "start": "nodemon -L ./app/server.js"
   },
   "dependencies": {
-    "body-parser": "^1.8.4",
-    "cookie-parser": "~1.3.3",
+    "bole": "^2.0.0",
     "debug": "^2.0.0",
     "express": "^4.9.8",
-    "hiredis": "^0.1.17",
-    "hjs": "~0.0.6",
-    "morgan": "^1.3.2",
-    "redis": "~0.12.1",
-    "serve-favicon": "^2.1.7"
+    "mongodb": "^2.0.40",
+    "nunjucks": "^1.3.4"
   }
 }
